# ci-quality-gate

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: quality-gate.yml
sample_data/: all_pass.xml  assertion_failure.xml  error_and_skip.xml
src/quality_gate/: __init__.py  __main__.py  cli.py  dashboard.py  issues.py
src/quality_gate/flake/: __init__.py  detector.py  engine.py  store.py
src/quality_gate/gate/: __init__.py  checks.py  config.py  coverage.py  gate.py  report.py
src/quality_gate/parser/: __init__.py  models.py
src/quality_gate/parser/adapters/: __init__.py  base.py  junit.py
src/quality_gate/triage/: __init__.py  claude.py  config.py  models.py  openai.py  prompt.py  provider.py  triage.py
tests/: test_cli.py  test_cli_dashboard.py  test_cli_triage.py  test_dashboard.py  test_flake_detector.py  test_flake_engine.py  test_flake_store.py  test_gate.py  test_gate_checks.py  test_gate_coverage.py  test_issues.py  test_parser.py  test_triage.py  test_triage_live_providers.py  test_triage_prompt.py  test_triage_provider.py
