[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci-quality-gate"
version = "0.1.0"
description = "AI-powered CI/CD quality gate: JUnit parsing, flake detection, and LLM failure triage."
readme = "README.md"
requires-python = ">=3.12"
# The core is pure standard library — no third-party runtime dependencies.
# LLM backends are optional extras, imported lazily only when selected.
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
llm = ["anthropic>=0.40", "openai>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "allure-pytest>=2.13",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
quality-gate = "quality_gate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quality_gate"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long fixture / JSON literals in tests are fine

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true   # anthropic/openai are lazy, optional, and stub-less here
warn_redundant_casts = true
warn_unused_ignores = true
